--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knockout</title>
 </head>
@@ -11,13 +11,18 @@
     <div class="container">
         <!-- div.row>div.col-xs-12 -->
         <div class="row">
-            <div class="col-xs-12"></div>
+            <div class="col-xs-12">
                 <br>
                 <br>
             <label data-bind="text: labelText">Label</label>
             <input type="text" data-bind="value: inputValue">
                 <br>
+                    <ul data-bind="foreach: list">
+                        <li data-bind="text: $data"></li>
+                    </ul>
+                <br>
             <button class="btn btn-primary" data-bind="click: buttonAction">Ação</button>
+            </div>
         </div>
     </div>
     
@@ -28,11 +33,21 @@
 
             var self = this;
 
-            self.labelText = "Label Text";
-            self.inputValue = "I";
+            self.labelText = ko.observable("Label Text");
+            self.inputValue = ko.observable("qualquer coisa");
+            self.list = ko.observableArray([1,3,5,7,9,11]);
             self.buttonAction = function() {
 
-                console.log("clicked")
+                self.list.splice(2,1);
+
+                self.inputValue.subscribe(function(novoValor){
+                    if(novoValor == "100")
+                        self.labelText("certo")
+                    else
+                        self.labelText("errado")
+                })
+
+                // console.log("clicked")
 
             }
         }
